--- a/style.css
+++ b/style.css
@@ -49,3 +49,9 @@ li {
     font-size: 24px;
     font-weight: 700;
 }
+@media (max-width: 600px){
+    .nav-list{
+        display: none;
+    }
+
+}
