--- a/style.css
+++ b/style.css
@@ -49,9 +49,12 @@ li {
     font-size: 24px;
     font-weight: 700;
 }
+.content-wrapper{
+    position: absolute;
+    width: 100%;
+}
 @media (max-width: 600px){
     .nav-list{
         display: none;
     }
-
 }
