--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 header {
     width: 100%;
     height: 62vh;
-    background-image: url(./image/sky.jpg);
+    background-image: url(./image/photo-1437719417032-8595fd9e9dc6.avif);
     background-position: center;
     background-size: cover;
     padding-top: 20px;
@@ -22,21 +22,21 @@ header {
 .container {
     width: 90%;
     height: 60px;
-    background-color: #fff;
+    background-color: transparent;
     margin: auto;
     padding: 30px;
     border-radius: 30px;
-    border: 1px solid black;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .nav-list {
     display: flex;
     gap: 20px;
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 500;
+    color: #443d3d;
 
 }
 
@@ -69,8 +69,9 @@ li {
 }
 form{    position: absolute;
       bottom: 0;
-      background: linear-gradient(to right, yellow,blue)
-}
+      background: linear-gradient(to right, yellow,blue)}
+      .menu-icon{display: none;}
+
 @media (max-width: 600px) {
     .nav-list {
         display: none;
