--- a/style.css
+++ b/style.css
@@ -117,9 +117,9 @@ form {
 }
 
 .Servics {
-    margin-top: 190px;
     padding: 100px 0;
     background-color: rgb(205, 238, 205);
+    margin-top: 190px;
 }
 
 .Servics h5 {
@@ -156,7 +156,15 @@ form {
    margin: 20px;
    font-weight: 700;
 }
-
+.des{margin-bottom: 10px;}
+.destination{background:#f7efef;}
+.destination-card{
+    background:#fff ;
+}
+.destination-card img {
+    width:100%;
+    height: 300px;
+}
 @media (max-width: 600px) {
     .nav-list {
         display: none;
