--- a/style.css
+++ b/style.css
@@ -167,6 +167,29 @@ form {
     width:100%;
     height: 300px;
 }
+.destination-card p{
+    margin:10px 10px 10px;
+}
+.destination-card h2{
+    margin: 10px 10px 20px;
+}
+.destination-card a{ margin-top: 10px;
+    margin: 10px 10px 20px;
+    text-decoration: none;
+    background: black;
+    color: #fff;
+    padding: 2px 20px;
+    font-weight: 600;
+}
+footer{
+    width: 100%;
+    background-color: #616361;
+    padding: 15px 0;
+}
+footer p {
+    text-align: center;
+    color: #ccc;
+}
 @media (max-width: 600px) {
     .nav-list {
         display: none;
