--- a/style.css
+++ b/style.css
@@ -37,7 +37,18 @@ header {
     font-size: 15px;
     font-weight: 500;
     color: #443d3d;
+    list-style: none;
+}
 
+.pad {
+    color: black;
+    padding: 3px 22px;
+    border-radius: 20px;
+    text-decoration: none;
+}
+
+.pad:hover {
+    background-color: white;
 }
 
 li {
@@ -152,28 +163,40 @@ form {
 }
 
 .Servics .row .col h2 {
-   font-size: 24px;
-   margin: 20px;
-   font-weight: 700;
+    font-size: 24px;
+    margin: 20px;
+    font-weight: 700;
 }
-.des{margin-bottom: 10px;}
-.destination{background:#f7efef;}
-.destination-card{
-    background:#fff ;
+
+.des {
+    margin-bottom: 10px;
+}
+
+.destination {
+    background: #f7efef;
+}
+
+.destination-card {
+    background: #fff;
     padding-bottom: 30p;
     border: 1px solid #ccc;
 }
+
 .destination-card img {
-    width:100%;
+    width: 100%;
     height: 300px;
 }
-.destination-card p{
-    margin:10px 10px 10px;
+
+.destination-card p {
+    margin: 10px 10px 10px;
 }
-.destination-card h2{
+
+.destination-card h2 {
     margin: 10px 10px 20px;
 }
-.destination-card a{ margin-top: 10px;
+
+.destination-card a {
+    margin-top: 10px;
     margin: 10px 10px 20px;
     text-decoration: none;
     background: black;
@@ -181,21 +204,38 @@ form {
     padding: 2px 20px;
     font-weight: 600;
 }
-footer{
+
+footer {
     width: 100%;
     background-color: #616361;
     padding: 15px 0;
 }
+
 footer p {
     text-align: center;
     color: #ccc;
 }
-@media (max-width: 600px) {
-    .nav-list {
-        display: none;
-    }
 
-    .menu-icon {
-        display: flex;
-    }
+.containe {
+    width: 90%;
+    height: 60px;
+    background-color: transparent;
+    margin: auto;
+    padding: 30px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
+
+nav {
+    margin-top: 20px
+}
+
+.bod {
+    background-image: url(./image/sky.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100px;
+}
+
