--- a/style.css
+++ b/style.css
@@ -239,10 +239,14 @@ nav {
     height: 100px;
 }
 
-@media (max-width) {
+@media (max-width: 600) {
     .container {
         font-size: 14px;
         width: 100%;
+        display: flex;
+
+        flex-direction: column;
+
     }
 
     .nav-list {
