--- a/style.css
+++ b/style.css
@@ -242,18 +242,16 @@ nav {
 @media (max-width: 600) {
     .container {
         font-size: 14px;
-        width: 100%;
         display: flex;
-
         flex-direction: column;
 
     }
 
     .nav-list {
-        display: none;
         display: flex;
         flex-direction: column;
     }
-    .logo{max-width: 100vw;
-        height: auto;}
+    .logo{display: flex;
+        justify-content: center;
+        }
 }
