--- a/style.css
+++ b/style.css
@@ -227,6 +227,8 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-direction: column;
+
 }
 
 
