--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-direction: column};
-
+}
 
 .nav-list {
     display: flex;
@@ -227,7 +226,6 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    flex-direction: column;
 
 }
 
